fix: squash few bugs and tweak looks

--- a/src/app/lesson/lesson.component.scss
+++ b/src/app/lesson/lesson.component.scss
@@ -32,3 +32,7 @@ iframe {
   flex: 0;
   margin: 0;
 }
+.content {
+  display: grid;
+  grid-gap: 0.5em;
+}
