--- a/src/app/stopwatch/stopwatch.component.scss
+++ b/src/app/stopwatch/stopwatch.component.scss
@@ -9,11 +9,11 @@
   font-family: 'Digital 7', Courier, monospace;
   font-size: 3em;
   padding: 0.25rem 0.5rem;
-  border: 5px solid #E3EAEA;
-  border-radius: 0.25em;
+  border: 2px solid #303030;;
+  border-radius: 4px;
   display: block;
-  height: 1em;
-  width: 2.5em;
+  height: 0.94em;
+  width: 2.3em;
   margin-top: 0.5rem;
   background: #B3C2AF;
   box-shadow: inset 0px 0px 10px rgba(67,70,64,0.5);
